<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEFFC2">

    <!-- Question text -->
    <TextView
        android:id="@+id/tvLearningQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/onboarding_q_learning"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Dots: third active -->
    <LinearLayout
        android:id="@+id/llDots3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvLearningQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/dot_active" />
    </LinearLayout>


    <Button
        android:id="@+id/btnSpanishLearning"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lang_spanish"
        android:textAllCaps="false"
        android:background="@drawable/bg_language_button"
        app:layout_constraintTop_toBottomOf="@id/llDots3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Back / Continue -->
    <Button
        android:id="@+id/btnBack3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/onboarding_back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContinue3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/onboarding_continue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>